--- a/src/ConfigWin/ConfigWin.fxml
+++ b/src/ConfigWin/ConfigWin.fxml
@@ -1,28 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.Integer?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.paint.Color?>
 
-<GridPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ConfigWin.ConfigWinController">
-    <children>
-        <Label alignment="BOTTOM_RIGHT" text="הגדרות" GridPane.columnIndex="1" />
-        <Button mnemonicParsing="false" text="אישור" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-        <Button alignment="BOTTOM_RIGHT" mnemonicParsing="false" text="ביטול" GridPane.rowIndex="4" />
-    </children>
-   <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints maxWidth="124.0" minWidth="52.0" prefWidth="99.0" />
-      <ColumnConstraints maxWidth="95.0" minWidth="10.0" prefWidth="48.0" />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints maxHeight="25.0" minHeight="0.0" prefHeight="0.0" />
-      <RowConstraints maxHeight="25.0" minHeight="0.0" prefHeight="25.0" />
-      <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="30.0" />
-   </rowConstraints>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0"
+          prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="ConfigWin.ConfigWinController">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="1.0" prefHeight="1.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+    </rowConstraints>
+    <HBox prefHeight="125.0" prefWidth="433.0" spacing="58.0" GridPane.hgrow="ALWAYS">
+        <GridPane.margin>
+            <Insets/>
+        </GridPane.margin>
+        <padding>
+            <Insets left="20.0" top="10.0"/>
+        </padding>
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="First player's color :" HBox.hgrow="ALWAYS"/>
+        <ColorPicker fx:id="firstColorCheckbox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+            <value>
+                <Color/>
+            </value>
+            <padding>
+                <Insets top="10.0"/>
+            </padding>
+        </ColorPicker>
+    </HBox>
+    <HBox spacing="40.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+        <padding>
+            <Insets left="20.0" top="10.0"/>
+        </padding>
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Second player's color :" HBox.hgrow="ALWAYS"/>
+        <ColorPicker fx:id="secColorCheckbox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+            <padding>
+                <Insets top="10.0"/>
+            </padding>
+        </ColorPicker>
+    </HBox>
+    <HBox prefHeight="58.0" prefWidth="368.0" spacing="50.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="16.0" prefWidth="115.0"
+               text="Board size (n x n) :" HBox.hgrow="ALWAYS"/>
+        <ComboBox fx:id="boardSizeCheckbox" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="136.0"
+                  promptText="Choose Board size(n x n)" HBox.hgrow="ALWAYS">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <Integer fx:value="8"/>
+                    <Integer fx:value="9"/>
+                    <Integer fx:value="10"/>
+                    <Integer fx:value="11"/>
+                    <Integer fx:value="12"/>
+                    <Integer fx:value="13"/>
+                    <Integer fx:value="14"/>
+                    <Integer fx:value="15"/>
+                    <Integer fx:value="16"/>
+                    <Integer fx:value="17"/>
+                    <Integer fx:value="18"/>
+                    <Integer fx:value="19"/>
+                    <Integer fx:value="20"/>
+                </FXCollections>
+            </items>
+            <value>
+                <Integer fx:value="8"/>
+            </value>
+        </ComboBox>
+        <padding>
+            <Insets left="30.0" top="10.0"/>
+        </padding>
+    </HBox>
+    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#saveSettings"
+            prefHeight="26.0" prefWidth="273.0" text="Apply" textAlignment="CENTER" textFill="#d71010"
+            GridPane.hgrow="ALWAYS" GridPane.rowIndex="3"/>
 </GridPane>
