--- a/src/reversigamegui/MazeGame.fxml
+++ b/src/reversigamegui/MazeGame.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<HBox xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="reversigamegui.MazeGameController" fx:id="root" spacing="10">
-    <VBox spacing="10">
-        <Button>Start Game</Button>
-        <Button>End Game</Button>
-    </VBox>
+
+<HBox fx:id="root" prefHeight="633.0" prefWidth="527.0" spacing="10" xmlns:fx="http://javafx.com/fxml/1"
+      xmlns="http://javafx.com/javafx/8.0.112" fx:controller="reversigamegui.MazeGameController">
+    <VBox fx:id="boardContainer" prefHeight="633.0" prefWidth="406.0" spacing="10"/>
+    <Label text="Label"/>
 </HBox>
