--- a/src/reversigamegui/MazeGame.fxml
+++ b/src/reversigamegui/MazeGame.fxml
@@ -2,10 +2,8 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
-<HBox fx:id="root" prefHeight="633.0" prefWidth="527.0" spacing="10" xmlns:fx="http://javafx.com/fxml/1"
-      xmlns="http://javafx.com/javafx/8.0.112" fx:controller="reversigamegui.MazeGameController">
-    <VBox fx:id="boardContainer" prefHeight="633.0" prefWidth="406.0" spacing="10"/>
-    <Label text="Label"/>
+
+<HBox fx:id="boardContainer_" prefHeight="633.0" prefWidth="527.0" spacing="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="reversigamegui.MazeGameController">
+    <Label text="Label" />
 </HBox>
