--- a/src/reversigamegui/MazeGame.fxml
+++ b/src/reversigamegui/MazeGame.fxml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 
-
-<HBox fx:id="boardContainer_" prefHeight="633.0" prefWidth="527.0" spacing="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="reversigamegui.MazeGameController">
-    <Label text="Label" />
-</HBox>
+<HBox fx:id="boardContainer_" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="633.0" prefWidth="527.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="reversigamegui.MazeGameController" />
