--- a/src/menuWin/menuWin.fxml
+++ b/src/menuWin/menuWin.fxml
@@ -6,26 +6,20 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane fx:id="rootGrid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-          prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.121"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="menuWin.MenuWinController">
+<GridPane fx:id="rootGrid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menuWin.MenuWinController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <VBox prefHeight="200.0" prefWidth="100.0" spacing="50.0">
         <children>
-            <Button fx:id="configBtn" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308"
-                    maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#showConfigWin"
-                    prefHeight="107.0" prefWidth="400.0" text="Settings"/>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="98.0" prefWidth="200.0"
-                    text="Start Game"/>
+            <Button fx:id="configBtn" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#showConfigWin" prefHeight="107.0" prefWidth="400.0" text="Settings" />
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#startGame" prefHeight="98.0" prefWidth="200.0" text="Start Game" />
         </children>
     </VBox>
-    <Button contentDisplay="CENTER" mnemonicParsing="false" text="Button" GridPane.hgrow="ALWAYS"
-            GridPane.rowIndex="2"/>
+    <Button contentDisplay="CENTER" mnemonicParsing="false" text="Button" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
 </GridPane>
