--- a/src/ConfigWin/ConfigWin.fxml
+++ b/src/ConfigWin/ConfigWin.fxml
@@ -60,6 +60,10 @@
                   promptText="Choose Board size(n x n)" HBox.hgrow="ALWAYS">
             <items>
                 <FXCollections fx:factory="observableArrayList">
+                    <Integer fx:value="4"/>
+                    <Integer fx:value="5"/>
+                    <Integer fx:value="6"/>
+                    <Integer fx:value="7"/>
                     <Integer fx:value="8"/>
                     <Integer fx:value="9"/>
                     <Integer fx:value="10"/>
