config win names update

--- a/src/ConfigWin/ConfigWin.fxml
+++ b/src/ConfigWin/ConfigWin.fxml
@@ -7,20 +7,26 @@
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ConfigWin.ConfigWinController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0"
+          prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="ConfigWin.ConfigWinController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         <RowConstraints minHeight="1.0" prefHeight="1.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <HBox prefHeight="125.0" prefWidth="433.0" spacing="58.0" GridPane.hgrow="ALWAYS">
@@ -31,7 +37,7 @@
             <Insets left="20.0" top="10.0" />
         </padding>
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="First player's color :" HBox.hgrow="ALWAYS" />
-        <ColorPicker fx:id="firstColorCheckbox" maxWidth="1.7976931348623157E308" onAction="#firstPlayerColorChanged" HBox.hgrow="ALWAYS">
+        <ColorPicker fx:id="firstColorCheckbox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
             <value>
                 <Color />
             </value>
@@ -40,18 +46,18 @@
             </padding>
         </ColorPicker>
     </HBox>
-    <HBox spacing="40.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+    <HBox spacing="40.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
         <padding>
             <Insets left="20.0" top="10.0" />
         </padding>
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Second player's color :" HBox.hgrow="ALWAYS" />
-        <ColorPicker fx:id="secColorCheckbox" maxWidth="1.7976931348623157E308" onAction="#secPlayerColorChanged" HBox.hgrow="ALWAYS">
+        <ColorPicker fx:id="secColorCheckbox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
             <padding>
                 <Insets top="10.0" />
             </padding>
         </ColorPicker>
     </HBox>
-    <HBox prefHeight="58.0" prefWidth="368.0" spacing="50.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
+    <HBox prefHeight="58.0" prefWidth="368.0" spacing="50.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4">
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="16.0" prefWidth="115.0" text="Board size (n x n) :" HBox.hgrow="ALWAYS" />
         <ComboBox fx:id="boardSizeCheckbox" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="136.0" promptText="Choose Board size(n x n)" HBox.hgrow="ALWAYS">
             <items>
@@ -83,6 +89,23 @@
             <Insets left="30.0" top="10.0" />
         </padding>
     </HBox>
-    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#saveSettings" prefHeight="26.0" prefWidth="273.0" text="Apply" textAlignment="CENTER" textFill="#15a12c" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
-    <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#exitSettingsWindow" prefHeight="26.0" prefWidth="116.0" text="Cancel" textFill="#f50707" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
+    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#saveSettings"
+            prefHeight="26.0" prefWidth="273.0" text="Apply" textAlignment="CENTER" textFill="#15a12c"
+            GridPane.hgrow="ALWAYS" GridPane.rowIndex="5"/>
+    <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#exitSettingsWindow" prefHeight="26.0"
+            prefWidth="116.0" text="Cancel" textFill="#f50707" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5"/>
+    <TextField fx:id="firstName" alignment="CENTER" maxWidth="1.7976931348623157E308"
+               promptText="Enter first player name here (default &quot;Bob&quot;)" GridPane.hgrow="ALWAYS"
+               GridPane.rowIndex="1">
+        <font>
+            <Font name="System Italic" size="13.0"/>
+        </font>
+    </TextField>
+    <TextField fx:id="secondName" alignment="CENTER" maxWidth="1.7976931348623157E308"
+               promptText="Enter second player name here (default &quot;Alice&quot;)" GridPane.hgrow="ALWAYS"
+               GridPane.rowIndex="3">
+        <font>
+            <Font name="System Italic" size="13.0"/>
+        </font>
+    </TextField>
 </GridPane>
