display players name

--- a/src/ConfigWin/ConfigWin.fxml
+++ b/src/ConfigWin/ConfigWin.fxml
@@ -15,18 +15,16 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0"
-          prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="ConfigWin.ConfigWinController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ConfigWin.ConfigWinController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="1.0" prefHeight="1.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <HBox prefHeight="125.0" prefWidth="433.0" spacing="58.0" GridPane.hgrow="ALWAYS">
@@ -37,7 +35,7 @@
             <Insets left="20.0" top="10.0" />
         </padding>
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="First player's color :" HBox.hgrow="ALWAYS" />
-        <ColorPicker fx:id="firstColorCheckbox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+        <ColorPicker fx:id="firstColorCheckbox" maxWidth="1.7976931348623157E308" onAction="#firstPlayerColorChanged" HBox.hgrow="ALWAYS">
             <value>
                 <Color />
             </value>
@@ -51,7 +49,7 @@
             <Insets left="20.0" top="10.0" />
         </padding>
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Second player's color :" HBox.hgrow="ALWAYS" />
-        <ColorPicker fx:id="secColorCheckbox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+        <ColorPicker fx:id="secColorCheckbox" maxWidth="1.7976931348623157E308" onAction="#secPlayerColorChanged" HBox.hgrow="ALWAYS">
             <padding>
                 <Insets top="10.0" />
             </padding>
@@ -89,23 +87,16 @@
             <Insets left="30.0" top="10.0" />
         </padding>
     </HBox>
-    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#saveSettings"
-            prefHeight="26.0" prefWidth="273.0" text="Apply" textAlignment="CENTER" textFill="#15a12c"
-            GridPane.hgrow="ALWAYS" GridPane.rowIndex="5"/>
-    <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#exitSettingsWindow" prefHeight="26.0"
-            prefWidth="116.0" text="Cancel" textFill="#f50707" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5"/>
-    <TextField fx:id="firstName" alignment="CENTER" maxWidth="1.7976931348623157E308"
-               promptText="Enter first player name here (default &quot;Bob&quot;)" GridPane.hgrow="ALWAYS"
-               GridPane.rowIndex="1">
+    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#saveSettings" prefHeight="26.0" prefWidth="273.0" text="Apply" textAlignment="CENTER" textFill="#15a12c" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
+    <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#exitSettingsWindow" prefHeight="26.0" prefWidth="116.0" text="Cancel" textFill="#f50707" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
+    <TextField fx:id="firstName" alignment="CENTER" maxWidth="1.7976931348623157E308" promptText="Enter first player name here (default &quot;Bob&quot;)" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
         <font>
-            <Font name="System Italic" size="13.0"/>
+            <Font name="System Italic" size="13.0" />
         </font>
     </TextField>
-    <TextField fx:id="secondName" alignment="CENTER" maxWidth="1.7976931348623157E308"
-               promptText="Enter second player name here (default &quot;Alice&quot;)" GridPane.hgrow="ALWAYS"
-               GridPane.rowIndex="3">
+    <TextField fx:id="secondName" alignment="CENTER" maxWidth="1.7976931348623157E308" promptText="Enter second player name here (default &quot;Alice&quot;)" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
         <font>
-            <Font name="System Italic" size="13.0"/>
+            <Font name="System Italic" size="13.0" />
         </font>
     </TextField>
 </GridPane>
