--- a/src/menuWin/menuWin.fxml
+++ b/src/menuWin/menuWin.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -24,4 +25,5 @@
     <Button alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308"
             mnemonicParsing="false" onAction="#showConfigWin" prefHeight="52.0" prefWidth="346.0" text="Settings"
             GridPane.rowIndex="1"/>
+    <Label textFill="#280cc9" GridPane.rowIndex="2"/>
 </GridPane>
